# VeriFACT-AI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DIAGRAMS_MERMAID.md  Dockerfile  Dockerfile.hf  LICENSE  Makefile  PRESENTATION_CONTENT.md  PRESENTATION_FINAL.md  README.md  SECURITY.md  VIVA_PREPARATION.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  share.sh
.claude/agents/: benchmarker.md  implementer.md  pipeline-auditor.md  research-architect.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/codebase-audit/: SKILL.md
.claude/skills/paper-extract/: SKILL.md
.claude/skills/safe-write/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
architecture/: 1.md  10.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  AAA.md  s41586-024-07421-0.md
deployment/: DEPLOYMENT_ROADMAP.md  FREE_DEPLOYMENT_OPTIONS.md  INDUS_APPSTORE_RELEASE_CHECKLIST.md
deployment/vercel/: README.md
docs/: architecture.md  deployment.md  evaluation.md  indus-appstore-release.md  oracle-vm-setup.md
plan/: deep-research-report.md  effervescent-soaring-creek.md  verifact-product-blueprint.md  verifactai-hardening-approved.md
report/: diagrams.tex  verifact_report.tex
scripts/: setup.sh
tests/smoke/: test_smoke.py
verifactai/: .env.example  app.py  config.py  overlay_server.py  requirements.txt  smoke_test.py  startup.py
verifactai/.pytest_cache/v/cache/: nodeids
verifactai/assets/: ARCHITECTURE_AUDIT_2026-04-14.md  CAPSTONE_REPORT.md  HYBRID_RESEARCH_ARCHITECTURE.md  PAPER_TRACEABILITY_MATRIX.md  SESSION_CHAT_TRANSCRIPT_AND_PROMPTS.md  acceptance_audit_report.txt  analyze_sample_response.json
verifactai/assets/appendix/: halueval_output.txt  sample_correct.json  sample_false.json  sanity_eval_output.txt  smoke_test_output.txt
verifactai/assets/evaluation/: evaluation_results.json  halueval_n100.json  truthfulqa_n200.json
verifactai/core/: __init__.py  annotator.py  claim_decomposer.py  evidence_retriever.py  fact_rules.py  hallucination_discriminator.py  llm_client.py  pipeline.py  prompt_optimizer.py  risk_classifier.py  selfcheck.py  semantic_entropy.py  verdict_engine.py
verifactai/data/: build_index.py
verifactai/desktop/: build_macos_app.command  com.verifact.desktop.plist  install_autostart.command  launch_verifact_desktop.command  run_acceptance_audit.sh  stop_verifact_desktop.command  verifact_desktop.py  verifact_native_app.py
verifactai/evaluation/: __init__.py  adversarial_benchmark.json  domain_benchmark.py  evaluate.py  metrics.py  plots.py  run_adversarial.py
verifactai/evaluation/data/: legal_domain.jsonl
verifactai/integrations/web_beacon_extension/: README.md  background.js  content.js  manifest.json  styles.css
verifactai/tests/: __init__.py  conftest.py  test_annotator.py  test_claim_decomposer.py  test_config.py  test_contradictions.py  test_discriminator.py  test_domain_benchmark.py  test_metrics.py  test_pipeline.py  test_selfcheck.py  test_verdict_engine.py
verifactai/utils/: __init__.py  helpers.py  runtime_safety.py
web/: .env.local.example  package-lock.json  package.json
web/src/pages/: index.js
